[tool.poetry]
name = "jelli"
version = "0.1.0"
description = "Jelli Is For Setting(s)"
authors = ["Simon Kennedy <sffjunkie+code@gmail.com>"]
license = "MIT"
readme = "ReadMe.md"

packages = [
    # { include = "jelli", from = "src" },
    { include = "jelli/py.typed", from = "src" },
]

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"

[tool.isort]
profile = "black"
lines_between_sections = 1

[tool.pytest.ini_options]
pythonpath = [
    "src"
]

[tool.poetry.dependencies]
python = "^3.10"
xdg = "^5.1.1"
pydantic = "^1.10.2"
tomli = "^2.0.1"
typing-extensions = "^4.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
